# server

rust-chat/: .gitignore  Cargo.toml  README.md  chat-commands-example.md  demo-user-limit.bat  demo-user-limit.sh  demo.bat  demo.sh  test-scenarios.md  user-flow-example.md
rust-chat-network/: .gitignore.delete  Cargo.toml  NETWORK_SUMMARY.md  README.md  client.rs  connect-to-server.bat  network-setup.md  ngrok-guide.md  server.rs  start-network-server.bat  testing-checklist.md
rust-chat/src/: client.rs  server.rs
