[package]
name = "rust-chat-network"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "server"
path = "server.rs"

[[bin]]
name = "client"
path = "client.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
